# demorec

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CI_THRESHOLDS.md  LICENSE  README.md  demo_frame_capture.demorec  demo_persistent_sessions.demorec  demo_persistent_sessions.srt  demo_presentation_mode.demorec  demo_video.demorec  pyproject.toml  release-please-config.json
.agents_tmp/: PLAN.md
.pr/: demo_persistent_sessions.srt  demo_video.srt  demo_video.vtt  full-demo.srt  index.html  openhands-preview-test.demorec  openhands-primitives.demorec  openhands-primitives.html  openhands-primitives.srt  slides.md
demo/: demorec-intro.demorec  demorec-intro.srt  index.html  offscreen-feature-demo.demorec  offscreen-feature-demo.srt  slides.md
demo_materials/: my_presentation.md
docs/: ARCHITECTURE.md  PROJECT_CONTEXT.md
examples/: hello.demorec  interactive.demorec  mixed.demorec  mixed_workflow.demorec  narrated.demorec  offscreen_setup.demorec  openhands_demo.demorec  persistent-sessions.demorec  presentation_demo.demorec  rows_test.demorec  sample_code.py  size_demo_24.demorec  size_demo_36.demorec  size_demo_50.demorec  size_demo_small.demorec  test_exact_rows.demorec  test_rows_20.demorec  test_rows_40.demorec  verify_rows.demorec  video1_raw_vim.demorec  video2_primitives.demorec  vim_code_review.demorec  vim_code_review_30rows.demorec  vim_primitives_demo.demorec
scripts/: check_coverage.py  check_file_length.py  check_function_length.py  quality_report.py
tests/: __init__.py  browser_basic.demorec  browser_forms.demorec  browser_test.demorec  browser_to_terminal.demorec  browser_type.demorec  roundtrip.demorec  terminal_to_browser.demorec  test_audio.py  test_checkpoints.py  test_cli.py  test_e2e_browser.py  test_e2e_terminal.py  test_js.py  test_modes.py  test_openhands.py  test_parser.py  test_placeholder.py  test_presentation.py  test_preview.py  test_recording.py  test_runner.py  test_srt.py  test_stage.py  test_terminal_commands.py  test_terminal_sessions.py  test_tts.py  (+3 more)
(+58 files in other folders)
