[project]
name = "demorec"
version = "0.2.0"
description = "Record CLI and web-based demos from a single script"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "JP Shackelford" }
]
keywords = ["demo", "recording", "terminal", "browser", "playwright", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "rich>=13.0",
    "edge-tts>=7.2.7",
]

[project.optional-dependencies]
tts = [
    "elevenlabs>=1.0",
    "gtts>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "ruff>=0.4",
]

[project.scripts]
demorec = "demorec.cli:main"

[project.urls]
Homepage = "https://github.com/jpshackelford/demorec"
Repository = "https://github.com/jpshackelford/demorec"
Issues = "https://github.com/jpshackelford/demorec/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demorec"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests requiring full environment",
    "slow: slow running tests",
]

[tool.coverage.run]
source = ["src/demorec"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
